objects/QuoteLineItem.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Note__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 14.10.2019</description>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <defaultValue>&quot;EUR / h&quot;</defaultValue>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 14.10.2019</description>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EUR / h</fullName>
                </value>
                <value>
                    <fullName>EUR (Pauschal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <formula>Product2.Basis__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kunde__c</fullName>
        <inlineHelpText>ist für die Fachpflege definiert</inlineHelpText>
        <label>% Kunde</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nur_AZK__c</fullName>
        <formula>IF( Personal__c == 0 , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nur Arbeitszeitkonto</inlineHelpText>
        <label>Nur AZK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <description>This is needed for the contract management of Landwehr.
Robin S. 14.10.2019</description>
        <label>Percent</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <description>This is needed for the contract Management of the Landwehr system.
Robin S. 14.10.2019</description>
        <label>Employee</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <inlineHelpText>ist für die Fachpflege definiert</inlineHelpText>
        <label>% Personal</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Anmerkung__c</fullName>
        <formula>Product2.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anmerkung</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Festbetrag__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Festbetrag</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Betrag_Kunde__c</fullName>
        <formula>IF( T_Festbetrag_Kunde__c == 0,Quote.Betrag_Kunde__c * Kunde__c,T_Festbetrag_Kunde__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Regeldienstsatz, welcher vom Kunden bezahlt werden muss</inlineHelpText>
        <label>Betrag Kunde</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rundungsregel__c</fullName>
        <label>Rundungsregel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rundungsregeln</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_Product_Name__c</fullName>
        <formula>Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>[T] Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Betrag_Personal__c</fullName>
        <formula>IF( T_Festbetrag_Personal__c == 0,Quote.Betrag_Personal__c *  Personal__c,T_Festbetrag_Personal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Regeldienstsatz, den das Personal erhält</inlineHelpText>
        <label>Betrag Personal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reisezeitverg_tung__c</fullName>
        <label>Reisezeitvergütung Kunde</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>T_Festbetrag_Kunde__c</fullName>
        <description>Wird im Dienstarten Flow verwendet.</description>
        <label>[T] Festbetrag Kunde</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dienstarten_Kategorie__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Art der Dienstart</inlineHelpText>
        <label>Dienstarten Kategorie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Festbetrag_Personal__c</fullName>
        <label>[T] Festbetrag Personal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>LockQuoteLineItems</fullName>
        <active>true</active>
        <description>Hinders users from editing quote line items, where contract is not in a draft status anymore.</description>
        <errorConditionFormula>NOT(
    ISBLANK(Contract__c) ||
    (NOT(ISBLANK(Contract__c)) &amp;&amp; ISPICKVAL(Contract__r.Status, &quot;Draft&quot;)) ||
    ISCHANGED(Contract__c) ||
				$Permission.EditFinalContracts
    )</errorConditionFormula>
        <errorMessage>This quote line item can not be edited any more. It&apos;s contract has already exceeded the draft status.</errorMessage>
    </validationRules>
</CustomObject>